--- a/theme.html
+++ b/theme.html
@@ -50,7 +50,11 @@
                 <li><a href="/">Home</a></li>
                 {% if pages %}
                 {% for page in pages %}
-                <li><a href="{{ page.permalink }}" class="{{ set_active(page.permalink) }}">{{ page.title }}</a></li>
+                  <li><a href="/tag/videos" class="{{ set_active('/tag/videos') }}">Video</a></li>
+                {% endfor %}
+                {% endif %}
+                  
+                  <li><a href="{{ page.permalink }}" class="{{ set_active(page.permalink) }}">{{ page.title }}</a></li>
                 {% endfor %}
                 {% endif %}
               </ul>
